# yield-vault

./: Anchor.toml  Cargo.toml  Makefile  README.md  package.json  solana-yield_aggregator.md
.cursor/rules/: rust-anchor-patterns.mdc  solana-yield-vault.mdc  task.mdc  testing-integration.mdc
cli/: Cargo.toml  sergAK7rTYLao2v7whZytuXrwyw5snxvA7sLoaoMKLk.json  testfile.txt
cli/idls/: yield_vault.json
cli/src/: commands.rs  consts.rs  http_client.rs  main.rs
keeper/: Cargo.toml
keeper/idls/: yield_vault.json
keeper/src/: config.rs  consts.rs  http.rs  main.rs  marginfi_apy.rs  rpc.rs  tracker.rs
marginfi-cpi-local/: Cargo.toml
marginfi-cpi-local/src/: idl.json  lib.rs
programs/yield-vault/: Cargo.toml
programs/yield-vault/src/: lib.rs
runbooks/: README.md
runbooks/deployment/: main.tx  signers.localnet.tx
scripts/: klend.ts
tests/: yield-vault.ts
