[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-client = "0.31.1"
anchor-lang = "0.31.1"
anyhow = "1.0.99"
clap = { version ="4.5.46", features = ["derive"] }
solana-client = "3.0.0"
solana-commitment-config = "3.0.0"
solana-program = "3.0.0"
solana-sdk = "3.0.0"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
